--- a/frontend/src/app/pages/prm/tabs/toilet/detail/toilet-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/toilet/detail/toilet-detail.component.html
@@ -1,7 +1,7 @@
 <atlas-detail-page-container>
   <div class="font-bold-4xl detail-title mb-3">
     {{ servicePoint.designationOfficial }} -
-    {{ 'PRM.TOILETS.PARKING_LOT' | translate }}
+    {{ 'PRM.TOILETS.TOILET' | translate }}
     {{ isNew ? '' : selectedVersion.designation }}
   </div>
   <div *ngIf="!isNew" class="font-xl mb-2">
@@ -44,7 +44,7 @@
       {{ selectedVersionIndex + 1 }}
     </h2>
 
-<!--    <app-toilet-form [form]="form"></app-toilet-form>-->
+    <app-toilet-form [form]="form"></app-toilet-form>
     <div *ngIf="!isNew">
       <mat-divider class="mt-4 mb-4"></mat-divider>
       <app-user-detail-info [record]="selectedVersion"></app-user-detail-info>
