--- a/frontend/src/app/pages/lidi/workflow/detail/line-version-snapshot-detail.component.html
+++ b/frontend/src/app/pages/lidi/workflow/detail/line-version-snapshot-detail.component.html
@@ -1,47 +1,48 @@
 <div scrollToTop>
   <atlas-detail-page-container>
-    <div class="line-workflow-detail">
-      <h2 class="font-bold-2xl">
-        {{ 'LIDI.LINE_VERSION_SNAPSHOT.DETAIL_WORKFLOW_INFORMATION' | translate }}
-      </h2>
+    <atlas-detail-page-content>
+      <div class="line-workflow-detail">
+        <h2 class="font-bold-2xl">
+          {{ 'LIDI.LINE_VERSION_SNAPSHOT.DETAIL_WORKFLOW_INFORMATION' | translate }}
+        </h2>
 
-      <div class="font-bold-4xl detail-title mb-3">
-        {{ lineVersionSnapshot.number }} - {{ lineVersionSnapshot.description }}
-      </div>
-      <div class="font-bold-xl mb-2">
-        <span data-cy="detail-subheading-id">{{ lineVersionSnapshot.slnid }}</span>
-        <span data-cy="total-range">
+        <div class="font-bold-4xl detail-title mb-3">
+          {{ lineVersionSnapshot.number }} - {{ lineVersionSnapshot.description }}
+        </div>
+        <div class="font-bold-xl mb-2">
+          <span data-cy="detail-subheading-id">{{ lineVersionSnapshot.slnid }}</span>
+          <span data-cy="total-range">
           -
           <date-range-text [dateRange]="lineVersionSnapshot"></date-range-text>
         </span>
-      </div>
+        </div>
 
-      <div class="mb-2">
-        <span class="font-bold-lg color-gray-900">{{ 'WORKFLOW.STATUS_DETAIL' | translate }} </span>
-        <span class="color-gray-900">{{
-          'WORKFLOW.STATUS.' + this.lineVersionSnapshot.workflowStatus | translate
-        }}</span>
-      </div>
-      <app-workflow-form
-        [formGroup]="workflowStartedFormGroup"
-        commentLabel="WORKFLOW.START.COMMENT"
-        personLabel="WORKFLOW.START.KEY_DATA"
-      ></app-workflow-form>
-      <app-workflow-form
-        *ngIf="showWorkflowCheckForm"
-        [formGroup]="workflowCheckFormGroup"
-        [hasMail]="false"
-        commentLabel="WORKFLOW.CHECK.COMMENT"
-        personLabel="WORKFLOW.CHECK.KEY_DATA"
-      ></app-workflow-form>
+        <div class="mb-2">
+          <span class="font-bold-lg color-gray-900">{{ 'WORKFLOW.STATUS_DETAIL' | translate }} </span>
+          <span class="color-gray-900">{{
+              'WORKFLOW.STATUS.' + this.lineVersionSnapshot.workflowStatus | translate
+            }}</span>
+        </div>
+        <app-workflow-form
+          [formGroup]="workflowStartedFormGroup"
+          commentLabel="WORKFLOW.START.COMMENT"
+          personLabel="WORKFLOW.START.KEY_DATA"
+        ></app-workflow-form>
+        <app-workflow-form
+          *ngIf="showWorkflowCheckForm"
+          [formGroup]="workflowCheckFormGroup"
+          [hasMail]="false"
+          commentLabel="WORKFLOW.CHECK.COMMENT"
+          personLabel="WORKFLOW.CHECK.KEY_DATA"
+        ></app-workflow-form>
 
-      <div class="mt-5 mb-3">
+        <div class="mt-5 mb-3">
         <span class="font-bold-2xl">{{
-          'LIDI.LINE_VERSION_SNAPSHOT.DETAIL_LINE_SNAPSHOT' | translate
-        }}</span>
-      </div>
+            'LIDI.LINE_VERSION_SNAPSHOT.DETAIL_LINE_SNAPSHOT' | translate
+          }}</span>
+        </div>
 
-      <div class="mb-2">
+        <div class="mb-2">
         <span
           *ngIf="!versionAlreadyExists"
           title="{{
@@ -50,39 +51,40 @@
         >
           <i class="bi bi-exclamation-diamond-fill warning-icon fs-5 me-1"></i>
         </span>
-        <a
-          (click)="this.navigateToLine()"
-          class="font-bold-base color-primary-400 mb-2"
-          target="_blank"
+          <a
+            (click)="this.navigateToLine()"
+            class="font-bold-base color-primary-400 mb-2"
+            target="_blank"
           >{{ 'LIDI.LINE_VERSION_SNAPSHOT.NAVIGATE_TO_VERSION' | translate }}
-          <link-icon></link-icon>
-        </a>
-      </div>
+            <link-icon></link-icon>
+          </a>
+        </div>
 
-      <div class="mb-2">
-        <span class="font-bold-lg color-gray-900">{{ 'COMMON.STATUS' | translate }} </span>
-        <span class="color-gray-900">{{
-          'COMMON.STATUS_TYPES.' + this.lineVersionSnapshot.status | translate
-        }}</span>
+        <div class="mb-2">
+          <span class="font-bold-lg color-gray-900">{{ 'COMMON.STATUS' | translate }} </span>
+          <span class="color-gray-900">{{
+              'COMMON.STATUS_TYPES.' + this.lineVersionSnapshot.status | translate
+            }}</span>
+        </div>
+        <line-detail-form
+          class="detail-wrapper"
+          [form]="lineVersionSnapshotForm"
+          [newRecord]="false"
+        ></line-detail-form>
+        <div class="mt-5">
+          <app-user-detail-info [record]="lineVersionSnapshot"></app-user-detail-info>
+        </div>
       </div>
-      <line-detail-form
-        class="detail-wrapper"
-        [form]="lineVersionSnapshotForm"
-        [newRecord]="false"
-      ></line-detail-form>
-      <div class="mt-5">
-        <app-user-detail-info [record]="lineVersionSnapshot"></app-user-detail-info>
-      </div>
-    </div>
+    </atlas-detail-page-content>
+
+    <atlas-detail-footer>
+      <atlas-button
+        backButton
+        buttonDataCy="back-to-overview"
+        buttonText="COMMON.BACK_TO_OVERVIEW"
+        buttonType="whiteFooterNonEdit"
+      >
+      </atlas-button>
+    </atlas-detail-footer>
   </atlas-detail-page-container>
-
-  <atlas-detail-footer>
-    <atlas-button
-      backButton
-      buttonDataCy="back-to-overview"
-      buttonText="COMMON.BACK_TO_OVERVIEW"
-      buttonType="whiteFooterNonEdit"
-    >
-    </atlas-button>
-  </atlas-detail-footer>
 </div>
